# shiori

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-macos.yml
docs/plans/: 2026-02-19-terminal-improvements-design.md  2026-02-19-terminal-improvements-plan.md
macos/: Info.plist  bundle.sh  shiori.icns  sign.sh
src/: ansi_parser.rs  app.rs  autosave.rs  diff_highlighter.rs  git_service.rs  git_state.rs  git_view.rs  ide_theme.rs  main.rs  pty_service.rs  review_state.rs  search_bar.rs  settings.rs  terminal_state.rs  terminal_view.rs
src/completion/: menu.rs  mod.rs  state.rs  symbols.rs
src/lsp/: client.rs  config.rs  mod.rs  registry.rs  transport.rs  types.rs
