[package]
name = "shiori"
version = "0.3.3"
edition = "2021"
authors = ["Augani"]
description = "A fast, beautiful code editor built with GPUI"
license = "Apache-2.0"
repository = "https://github.com/Augani/shiori"
homepage = "https://github.com/Augani/shiori"

[[bin]]
name = "shiori"
path = "src/main.rs"

[dependencies]
adabraka-ui = { version = "0.3.9", features = ["editor-languages"] }
gpui = { package = "adabraka-gpui", version = "0.5.1" }
smol = "2.0.2"
portable-pty = "0.8"
flume = "0.11"
thiserror = "2.0"
tree-sitter = "0.25.10"
unicode-width = "0.2"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
git2 = "0.19"
smallvec = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
url = "2"
dirs = "6"
which = "7"
openssl = { version = "0.10", features = ["vendored"] }
